# pkg-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
pkg/: cli.py
